# modern-data-stack

./: CONTRIBUTING.md  README.md  docker-compose.yml  pyproject.toml
_context/: specification.md
_context/tasks/: modern-data-stack-setup.md
dbt-analytics/: README.md  dbt_project.yml  packages.yml  run_with_mock_data.ps1  run_with_mock_data.sh
dbt-analytics/macros/: incremental_loading.sql  source.sql
dbt-analytics/macros/cleaning/: clean_from_metadata.sql
dbt-analytics/macros/core/: query_comment.sql  table_management.sql
dbt-analytics/macros/tests/: test_data_validation.sql
dbt-analytics/macros/transformations/: deduplicate_using_prioritization.sql
docs/: README.md
docs/architecture/: system-architecture-overview.md
docs/architecture/adrs/: 001-infrastructure-as-code-approach.md  002-security-governance-framework.md
docs/blog/: building-enterprise-grade-modern-data-stack.md
docs/deployment/: deployment-guide.md
docs/troubleshooting/: faq-and-troubleshooting.md
docs/tutorials/: 01-enterprise-dbt-patterns.md  02-powerbi-architecture-design.md  03-ml-pipeline-engineering.md  README.md
infrastructure/docker/: CONTAINER_SECURITY_BEST_PRACTICES.md  Dockerfile.security-scanner  docker-compose.development.yml  docker-compose.production.yml  security-report.py  security-scan.sh
infrastructure/docker/dbt/: Dockerfile  profiles.yml  requirements.txt
infrastructure/docker/great-expectations/: Dockerfile  great_expectations.yml  healthcheck.py  requirements.txt  start-ge.sh
infrastructure/docker/jupyter/: Dockerfile  Dockerfile.jupyter-devops  Dockerfile.jupyter-ml  Dockerfile.jupyterhub  devops_startup.py  docker-compose.jupyter.yml  init-db.sql  jupyter_notebook_config.py  jupyterhub_config.py  ml_startup.py  start-jupyterhub.sh
infrastructure/docker/mlflow/: Dockerfile  healthcheck.py  mlflow.conf  requirements.txt  start-mlflow.sh
infrastructure/terraform/: main.tf  terraform.tfvars.example  variables.tf
notebooks/: README.md
notebooks/data-exploration/: 01-retail-connector-eda.ipynb
notebooks/documentation/: DOCUMENTATION_IMPLEMENTATION_SUMMARY.md  _toc.yml  build-docs.py  deploy-docs.sh  enhance-notebook-docs.py  jupyter-book-config.yml  requirements.txt  test-documentation.py
notebooks/documentation/standards/: documentation-guidelines.md
notebooks/ml-workflows/: 01-feature-engineering.ipynb  01-feature-engineering.py  02-model-training.py  03-model-evaluation.py  04-model-deployment.py  05-model-monitoring.py  06-ab-testing.py  07-automated-retraining.py  08-production-ml-pipeline.py
notebooks/shared/: data_connectors.py  ml_utils.py  visualization_utils.py
notebooks/templates/: data-exploration-template.ipynb  devops-automation-template.ipynb  ml-workflow-template.ipynb
powerbi-models/: ARCHITECTURE_INNOVATIONS.md  README.md  azure-pipelines.yml
powerbi-models/devops-templates/: powerbi-deployment.yml
powerbi-models/master-model/: README.md
sample-data/: README.md
sample-data/generators/: retail_data_generator.py
sample-data/lineage-tracking/: data_lineage_tracker.py
sample-data/quality-monitoring/: data_quality_monitor.py
sample-data/utilities/: data_masking_utils.py
scripts/: README.md
tests/: README.md
tools/: README.md
(+148 files in other folders)
